# mandelbot

./: CMakeLists.txt  conanfile.txt
client/: CMakeLists.txt
client/include/: Image.hpp  Pixel.hpp  Renderer.hpp  RendererMandelbrot.hpp
client/src/: Image.cpp  Pixel.cpp  Renderer.cpp  RendererMandelbrot.cpp  main_client.cpp
server/: CMakeLists.txt
server/src/: main_server.cpp
shared/: CMakeLists.txt
shared/include/: FrameData.hpp  RenderSettings.hpp
shared/src/: FrameData.cpp  RenderSettings.cpp
